@@ -724,6 +724,25 @@ _`initial_header_level`
 
     Default: 1 (for "<h1>").  Option: ``--initial-header-level``.
 
+_`math_output`
+    The format of mathematical content ("math" role and directive) in
+    the output document. Supported values are
+    
+    :HTML:   Convert to a HTML representation (needs the ``math.css``
+             stylesheet).
+             
+    :MathML: Convert to MathML.
+             
+             With the "html4css1" writer, the resulting HTML document
+             does not validate, as there is no DTD for MathML + XHTML
+             Transitional. However, MathML-enabled browsers will
+             render it fine.
+             
+    :LaTeX:  Include literal LaTeX code.
+    
+    The HTML and MathML options support only a subset of valid LaTeX
+    code.
+    
 _`option_limit`
     The maximum width (in characters) for options in option lists.
     Longer options will span an entire row of the table used to render
@@ -1196,6 +1215,8 @@ latex_preamble
 
 
     Option: ``--latex-preamble``
+    
+    .. _Linux Libertine: http://www.linuxlibertine.org/
 
 .. _template [xetex writer]:
 
